# llm_management

./: pyproject.toml
src/interface/basic/: main.py
src/interface/clients/: llm_handler.py  ollama_qwen_llm.py
src/interface/tools/: main.py  test_tools.py  tool_handler.py
src/interface2/basic/: main.py
src/interface2/clients/: llm_handler.py  ollama_qwen_llm.py
src/interface2/experiments/: final_answer.py
src/interface2/formatted_response/: main.py
src/interface2/plan_then_execute/: remains.py
src/interface2/plan_then_execute_v2/: capabilities.py  entites.py  error_handling.py  execution.py  executor.py  extract_plan.py  final_answer.py  models.py  output.txt  pipeline.py  plan_manager.py  planner.py  re_planner.py  symbolic_reference.py  symbolic_reference_old.py  types.py
src/interface2/tools/: main.py  test_tools.py  tool_handler.py  tool_loop.py
src/langchain/: langchain_client.py
src/langchain/basic_chat/: main.py
src/langchain/basic_multitask/: main.py
src/langchain/create_agent/: main.py
src/langchain/rag/: main.py  middleware.py  vector_search.py
src/langchain/routing/: main.py  router.py
src/langchain/structured_response/: main.py
src/langchain/system_level_scaffolding/: decomposer.py  executor.py  json_test.sh  test.py
src/langchain/tools/: main.py
src/litellm/: common.py
src/litellm/basic/: basic.py
src/litellm/tools/: main.py  test_tools.py  tool_handler.py
src/ollama/basic/: basic.py
src/ollama/json_schema/: main.py
src/ollama/tools/: main.py
src/openai/: openai_client.py
src/openai/basic_chat/: main.py
(+30 files in other folders)
